--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Engr Bamex Portfolio</h1>
+    <h1>Olabamiji Toyosi Portfolio</h1>
     <h2>I'm a web developer and Graphics designer</h2>
     <a href="./index2.html">Movie ranking Project</a>
     <br>
