--- a/index2.html
+++ b/index2.html
@@ -6,16 +6,17 @@
     <title>movie ranking project</title>
 </head>
 <body>
-    <h1>The Best Movie According to Angela</h1>
+    <h1>The Best Movie According to Oluwatoyosi</h1>
 <h3>My top three movie of all-time</h3>
 <hr>
-<h3>Spirited Away</h3>
+<h3>Abejoye</h3>
 This is my favorite anime. I love the beautiful image.
 <br>
-<h3>Ex Machina</h3>
+<h>Abbatior</h3>
 Really cool sci-fi Movie
 <br>
 <h3>Drive</h3>
 Super beautiful film. Really artistic
 </body>
+
 </html>
