Fix HTML structure and correct header tags

--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
 <h3>Abejoye</h3>
 This is my favorite anime. I love the beautiful image.
 <br>
-<h>Abbatior</h3>
+<h3>Abbatior</h3>
 Really cool sci-fi Movie
 <br>
 <h3>Drive</h3>
@@ -20,3 +20,4 @@ Super beautiful film. Really artistic
 </body>
 
 </html>
+
