--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>It's My Birthday!</h1>
-<h2>On the 13th September</h2>
+<h2>On the 16th May</h2>
 <img src="./birthday cake picture.jpg" width="150px">
 <h3>What to bring:</h3>
 <ul>
@@ -16,6 +16,7 @@
 <li>An appetite (There will be alot of food)</li>
 </ul>
 <h3>This is where you need to go:</h3>
-<a href="./www.google map" >Google Map Link</a>
+<a href="https://www.google.com/maps/place/Phoenix+Imperial+Hotels+%26+Apartments+Abuja/@9.1239818,7.4074733,15z/data=!4m18!1m8!3m7!1s0x104ddff03e25362d:0x54c6799f90456dd1!2sKatampe+Extension,+1+Patrick+Yakowa+St,+Katampe+Extension,+Gwarinpa+901101,+Federal+Capital+Territory!3b1!8m2!3d9.1239994!4d7.4258832!16s%2Fg%2F11jjv3fl6n!3m8!1s0x104ddf6390e976df:0xa8c4ec7f09eaf409!5m2!4m1!1i2!8m2!3d9.1282898!4d7.4289653!16s%2Fg%2F11k715x86q?hl=en&entry=ttu&g_ep=EgoyMDI1MTAxNC4wIKXMDSoASAFQAw%3D%3D" >Google Map Link</a>
 </body>
+
 </html>
